Fixed layout issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,6 @@ body {
 main {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
 }
 
 .card-header {
@@ -105,6 +104,14 @@ button {
 button:hover {
     background-color: var(--dark);
     color: var(--yellow);
+}
+
+.results {
+    display: flex;
+    flex-direction: column;
+    background-color: var(--blue-grey);
+    Margin-left: 20px;
+    font-family: var(--header-font);
 }
 
 .results-card {
